# nextlabs_rest_api

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  setup.cfg
.devcontainer/: Dockerfile  devcontainer.json  install-skills.sh  post-create.sh
.github/: dependabot.yml  label_config.yml  pr_autolabeling_config.yml  release_drafting_config.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: changelog_updating.yml  code_security.yml  code_testing.yml  dependabot-auto-merge.yml  label_creation.yml  pr_labeling.yml  release_drafting.yml  release_publishing.yml
docs/: architecture.md  cli_blueprint.md  development.md  troubleshooting.md  ubiquitous_language.md
docs/cast/: README.md  _fake_nextlabs.sh  demo.tape
requirements/: base.txt  constraints.txt  dev.txt
src/nextlabs_sdk/: __init__.py  _config.py  _envelope.py  _http_transport.py  _http_transport_logging.py  _http_transport_logging_async.py  _json_response.py  _logging.py  _pagination.py  _retry_policy.py  _version.py  exceptions.py
tests/: conftest.py  test_account_preferences.py  test_account_preferences_store.py  test_active_account_store.py  test_activity_log_query_builder.py  test_activity_log_query_models.py  test_activity_log_query_service.py  test_async_activity_log_query_service.py  test_async_audit_log_service.py  test_async_cloudaz_client.py  test_async_component_search_service.py  test_async_component_service.py  test_async_component_type_search_service.py  test_async_component_type_service.py  test_async_dashboard_service.py  test_async_operator_service.py  test_async_pdp_client.py  test_async_policy_search_service.py  test_async_policy_service.py  test_async_report_service.py  test_async_reporter_audit_log_service.py  test_async_system_config_service.py  test_async_tag_service.py  test_audit_log_models.py  test_audit_log_service.py  test_body_limit_resolver.py  test_cached_token.py  test_cli_account_resolver.py  test_cli_active_account.py  test_cli_activity_logs.py  test_cli_app.py  test_cli_app_verbose.py  test_cli_audit_logs.py  test_cli_audit_logs_detail.py  test_cli_auth.py  test_cli_auth_pdp_login.py  test_cli_binary_output.py  test_cli_bulk_ids.py  test_cli_cache_key.py  test_cli_client_factory.py  (+86 more)
tests/_openapi/: __init__.py  allowlist.py  examples.py  model_parity.py  model_registry.py  parity_allowlist.py  placeholders.py  spec.py  (+5 more)
tools/: build.py  checks.py  create_venv.py  decode_jwt.py  fetch_openapi_spec.py  init_project.sh  setup_bare_metal.sh  tests.py
(+122 files in other folders)
