[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nextlabs-sdk"
dynamic = ["version"]
description = "A typed Python SDK wrapping the NextLabs CloudAz Console API and PDP REST API"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27,<1.0",
    "pydantic>=2.0,<3.0",
    "defusedxml>=0.7,<1.0",
]
# ── Uncomment / fill in before publishing to PyPI ──
license = {text = "MIT"}
readme = "README.md"
authors = [{name = "Steven England", email = "github@steven-england.info"}]
keywords = ["nextlabs", "cloudaz", "pdp", "xacml", "sdk", "rest-api"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
[project.urls]
Homepage = "https://github.com/stevenengland/nextlabs_rest_api"
Repository = "https://github.com/stevenengland/nextlabs_rest_api"
"Bug Tracker" = "https://github.com/stevenengland/nextlabs_rest_api/issues"

[project.optional-dependencies]
cli = [
    "typer>=0.12,<1.0",
    "rich>=13.0,<14.0",
]

[project.scripts]
nextlabs = "nextlabs_sdk._cli._entrypoint:main"

[tool.setuptools.packages.find]
where = ["src"]

# ── Uncomment for typed library (PEP 561) ──
[tool.setuptools.package-data]
nextlabs_sdk = ["py.typed"]

[tool.setuptools.dynamic]
version = {file = "version.txt"}

# ── Uncomment for version bumping (PyPI publishing) ──
[tool.bumpversion]
current_version = "0.1.0"
commit = true
tag = true
tag_name = "v{new_version}"
[[tool.bumpversion.files]]
filename = "version.txt"

# solely for Pyright (Pylance is built on top)
# extraPath and pythonPath settings are necessary to avoid building a complete package
# - like with setup.py -> package_dir
# - like with pyproject.toml -> setuptools
# -> Otherwise the imports are not resolved at least from the tests dir
[tool.pyright]
include = ["src", "tests"]
reportRedeclaration = "none"
reportUnusedVariable = "warning"
reportUnusedImport = "warning"
reportUnusedFunction = "warning"
reportUnusedClass = "warning"
reportUnusedExpression = "warning"
extraPaths = ["."]
pythonPath = "."
executionEnvironments = [
  { root = "tests", pythonPath = ".", reportUnknownMemberType = "none", reportArgumentType = "none", reportCallIssue = "none", reportAttributeAccessIssue = "none" },
  { root = ".", pythonPath = "." }
]
